<resources>
    //Login e Cadastro
    <string name="app_name">LeiaAqui</string>
    <string name="txtSenha">Senha</string>
    <string name="txtSenha2">Confirmar Senha</string>
    <string name="txtMatricula">Matricula</string>
    <string name="txtEmail">E-mail</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="imageButtonLogo" />

    //MENU
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>

    //Categoria leitores
    <string name="img_cat_leitores">ImagemCatLeitores</string>
    <string name="txtDescCatLeitores">Descrição da categoria</string>
    <string name="txtDiasEmprestimoLeitor">Máximo de dias de empréstimo</string>
    <string name="btnCadastrarCatLeitores">CadastrarCatLeitores</string>
    <string name="txtIDCatLeitor">Código da categoria</string>
    <string name="txtMenuCatLeitores">Categoria de Leitores</string>
    <string name="btnCadCatLeitor">CADASTRAR</string>
    <string name="btnAltCatLeitor">ALTERAR</string>
    <string name="btnExCatLeitor">EXCLUIR</string>
    <string name="txtCadCatLeitor">Cadastro de Categoria</string>
    <string name="radioEstudante">Estudante</string>
    <string name="radioProfessor">Professor</string>
    <string name="radioComum">Usuário Comum</string>
    <string name="txtOutraCatLeitor">Outra: </string>

    //Categoria livros
    <string name="img_cat_livro">ImagemCatLivro</string>
    <string name="txtDescCatLivro">Descrição da categoria</string>
    <string name="txtDiasEmprestimoCatLivro">Máximo de dias de empréstimo</string>
    <string name="btnCadastrarCatLivros">Cadastrar</string>
    <string name="btnAlterarCatLivros">Alterar</string>
    <string name="btnExcluirCatLivros">Excluir</string>
    <string name="txtIDCatLivro">Código da categoria</string>
    <string name="txtTaxaMulta">Taxa de Multa</string>
    <string name="txtCadCatLivros">Categoria de Livros</string>
    <string name="btnCadCatLivro">CADASTRAR</string>
    <string name="btnAltCatLivro">ALTERAR</string>
    <string name="btnExCatLivro">EXCLUIR</string>
    <string name="txtCadCatLivro">Cadastro de Categoria</string>
    <string name="txtAltCatLivro">Alteração de Categoria</string>
    <string name="txtExCatLivro">Exclusão de Categoria</string>
    <string name="checkCatLivro">Livro</string>
    <string name="checkCatPeriodico">Periódico</string>
    <string name="checkCatRevista">Revista</string>
    <string name="checkCatJornal">Jornal</string>
    <string name="checkCatDidatica">Nota Didática</string>
    <string name="checkCatRelatorio">Relatório Técnico</string>
    <string name="checkCatTese">Tese de Doutorado</string>
    <string name="checkCatMestrado">Dissertação de Mestrado</string>


    //Clientes
    <string name="txtMenuClientes">Clientes</string>
    <string name="btnCadCliente">CADASTRAR</string>
    <string name="btnAltCliente">ALTERAR</string>
    <string name="btnExCliente">EXCLUIR</string>
    <string name="txtCadClientes">Cadastro de Cliente</string>
    <string name="txtAltClientes">Alteração de Cliente</string>
    <string name="txtExClientes">Exclusão de Cliente</string>
    <string name="txtNomeCliente">Nome</string>
    <string name="txtEmailCliente">E-mail</string>
    <string name="txtCPFCliente">CPF</string>
    <string name="txtEnderecoCliente">Endereço</string>
    <string name="txtCelularCliente">Celular</string>
    <string name="txtDataNascCliente">Data de Nascimento</string>
    <string name="txtCategoriaCliente">Categoria de Leitor</string>
    <string name="btnCadastrarCliente">Cadastrar</string>
    <string name="btnAlterarCliente">Alterar</string>
    <string name="btnExcluirCliente">Excluir</string>
    <string-array name="catLeitores">
        <item>Estudante</item>
        <item>Professor</item>
        <item>Usuário Comum</item>
    </string-array>


</resources>
