<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clientes">

    <TextView
        android:id="@+id/txtAltClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtAltClientes"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNomeCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtNomeCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAltClientes" />

    <EditText
        android:id="@+id/txtEmailCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeCliente" />

    <EditText
        android:id="@+id/txtCPFCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtCPFCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailCliente" />

    <EditText
        android:id="@+id/txtEnderecoCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtEnderecoCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCPFCliente" />

    <EditText
        android:id="@+id/txtCelularCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/txtCelularCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnderecoCliente" />

    <EditText
        android:id="@+id/txtDataNascCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/txtDataNascCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCelularCliente" />

    <Spinner
        android:id="@+id/txtCategoriaCliente"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtCategoriaCliente"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDataNascCliente" />

    <Button
        android:id="@+id/btnAlterarCliente"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:background="#2E9AFE"
        android:text="@string/btnCadastrarCliente"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoriaCliente"
        tools:text="Alterar" />

</androidx.constraintlayout.widget.ConstraintLayout>